--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,7 +27,7 @@
         </div>
       </a>
 
-      <a class="page-link" onclick="$('nav').toggleClass('expanded')" href="https://www.meetup.com/Bitcoin-HK/">
+      <a class="page-link" onclick="$('nav').toggleClass('expanded')" href="/meetups/">
         <i class="icon-direction"></i>
         <div>
           Meetups
