--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -2,12 +2,21 @@
 layout: default
 ---
 
+<header class="post-header">
   <div class="c">
-    <header class="post-header">
-      <h1>{{ page.title }}</h1>
-      <p class="lead">{{ page.subtitle }}</p>
-    </header>
+    <h1>{{ page.title }}</h1>
+    <p class="lead">{% if page.subtitle %}{{ page.subtitle }}{% endif %}</p>
   </div>
+</header>
+
+{% assign curDate = site.time | date: '%s' %}
+{% assign postStartDate = post.date | date: '%s' %}
+
+<div id="details">
+  <div class="c">
+    <p class="lead">{% if page.host %} Written by {{ page.author }} on {% endif %} {{ page.date | date: '%-d %B, %Y' }}</p>
+  </div>
+</div>
 
 <!-- END COVER -->
 </div>
