default color preview if there's no background

--- a/styles/editme.css
+++ b/styles/editme.css
@@ -118,3 +118,7 @@ figure a img {
 [data-passname] {
   border-bottom: dashed 1px #FF0000;
 }
+
+.post-link .preview {
+  background-color: #FF0000;
+}
