embed discourse for comments

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -14,7 +14,7 @@ layout: default
 
 <div id="details">
   <div class="c">
-    <p class="lead">{% if page.author %} By {{ page.author }} on {% endif %} {{ page.date | date: '%-d %B, %Y' }}</p>
+    <p class="lead">{% if page.author %} By +{{ page.author }} on {% endif %} {{ page.date | date: '%-d %B, %Y' }}</p>
   </div>
 </div>
 
@@ -32,3 +32,4 @@ layout: default
   </div>
 
 </section>
+{% include discourse_comments.html %}
