--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,4 +27,16 @@
     <!-- Apple Touch Icon -->
     <link rel="apple-touch-icon" content="/favicon.png">
     <link rel="apple-touch-icon-precomposed" href="favicon.png">
+    <script type="text/javascript">
+  WebFontConfig = {
+    google: { families: [ 'Raleway:400,300,700:latin' ] }
+  };
+  (function() {
+    var wf = document.createElement('script');
+    wf.src = 'https://cdnjs.cloudflare.com/ajax/libs/webfont/1.5.18/webfontloader.js';
+    wf.type = 'text/javascript';
+    wf.async = 'true';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(wf, s);
+  })(); </script>
 </head>
