properly formatted atom feed

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 
       <h3>Keep in touch</h3>
       <p class="rss-subscribe">
-        <a href="{{ "/feed.xml" | prepend: site.baseurl }}">Subscribe via <i class="icon-broadcast"></i> RSS</a>
+        <a href="{{ "/atom.xml" | prepend: site.baseurl }}">Subscribe via <i class="icon-broadcast"></i> Atom</a>
         •
         <a href="mailto:info@bitcoin.org" target="_blank"><i class="icon-envelope"></i> info@bitcoinhk.org</a>
 
