--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,7 @@
     </style>
 
     <link rel="stylesheet" href="{{ "/styles/editme.css" | prepend: site.baseurl }}">
+    <link rel="alternate" type="application/atom+xml" title="{{ site.name }}" href="{{ site.baseurl }}/atom.xml" >
 
     <link rel="shortcut icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale = 1.0,maximum-scale=2.0,user-scalable=no">
