--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
     <meta name="viewport" content="width=device-width">
+
+    {% if page.excerpt %}<meta name="description" content="{{ page.excerpt | strip_html }}">
+    {% else %}
     <meta name="description" content="{{ site.description }}">
+    {% endif %}
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <!-- Custom CSS -->
