fix footer email

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
       <p class="rss-subscribe">
         <a href="{{ "/atom.xml" | prepend: site.baseurl }}">Subscribe via <i class="icon-broadcast"></i> Atom</a>
         •
-        <a href="mailto:info@bitcoin.org" target="_blank"><i class="icon-envelope"></i> info@bitcoinhk.org</a>
+        <a href="mailto:info@bitcoinhk.org" target="_blank"><i class="icon-envelope"></i> info@bitcoinhk.org</a>
 
       </p>
 
