add calendar file and link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,11 +35,11 @@
         </div>
       </a>
 
-      <a class="page-link" onclick="$('nav').toggleClass('expanded')" href="/bitcoin-lecture-series/">
+      <a class="page-link" onclick="$('nav').toggleClass('expanded')" href="/contact/">
         <i class="icon-cards"></i>
         <div>
-          Bitcoin Lecture Series
-          <small>Watch &amp; Listen</small>
+          Contact
+          <small>Follow &amp; Subscribe</small>
         </div>
       </a>
 
