remake members section

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
         </div>
       </a>
 
-      <a class="page-link" onclick="$('nav').toggleClass('expanded')" href="/members/">
+      <a class="page-link" onclick="$('nav').toggleClass('expanded')" href="/join/">
         <i class="icon-cards"></i>
         <div>
           Members
