--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,7 +20,9 @@
     <div class="row">
       <div class="col-33">
         <h3>BAHK</h3>
-        <p>Fostering and promoting Bitcoin and its technology in Hong Kong. Donations: 1BAHK1Esvn6L1icZREB8SFqTy7bBSRDwaS</p>
+        <p>Fostering and promoting Bitcoin and its technology in Hong Kong.</p>
+        <p>This site is also available via <a href="https://比特幣.組織.香港">比特幣.組織.香港</a></p>
+		<p>Donations: 1BAHK1Esvn6L1icZREB8SFqTy7bBSRDwaS</p>
         <p>
           <a href="/about"><i class="icon-plus"></i> Learn more</a>
           <br>
