--- a/styles/style.css
+++ b/styles/style.css
@@ -1902,6 +1902,21 @@ e(1.6) translateX(-20px);opacity:0}100%{transform:scale(1) translateX(0px);opaci
   border-bottom-left-radius: 4px;
   border-right: 1px solid rgba(0, 0, 0, 0.45); }
 
+.BTCPayButton {
+    box-shadow:inset 0px 1px 0px 0px #cf866c;
+    background-color: red;
+    border-radius:3px;
+    border:1px solid #942911;
+    display:inline-block;
+    cursor:pointer;
+    color: white;
+    font-family:Arial;
+    font-size:16px;
+    padding: 8px 24px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #854629;
+}
+
 body {
   font-family: "Raleway", Arial, sans-serif;
   font-size: 18px;
