--- a/styles/btcpay/checkout.css
+++ b/styles/btcpay/checkout.css
@@ -1,16 +1,16 @@
-.top-header {background-color: #f00;}
-.top-header .timer-row__progress-bar {background:#5E94BF;}
+.top-header {background-color: #fff;}
+.top-header .timer-row__progress-bar {background:red;}
 .top-header .timer-row {background: #AAAAAA;}
 .close-icon {color:#000;}
-.payment-tabs__slider {background: #5E94BF;     }
-.separatorGem {background: #5E94BF;}
-.action-button {color: #fff; background-color: #5E94BF;border-color: #5E94BF;}
+.payment-tabs__slider {background: red;     }
+.separatorGem {background: red;}
+.action-button {color: #fff; background-color: red;border-color: red;}
 .action-button:hover {background-color: #7faacc;}
-.action-button:focus, .action-button.focus {color: #fff;background-color: #5E94BF;
-    border-color: #5E94BF;}
-.action-button:active, .action-button.active, .open>.action-button.dropdown-toggle {    color: #fff;    background-color: #5E94BF;    border-color: #5E94BF;}
-.action-button:active:hover, .action-button:active:focus, .action-button:active.focus, .action-button.active:hover, .action-button.active:focus, .action-button.active.focus, .open>.action-button.dropdown-toggle:hover, .open>.action-button.dropdown-toggle:focus, .open>.action-button.dropdown-toggle.focus {    color: #fff;    background-color: #5E94BF;    border-color: #5E94BF;}
-.btnGroupLnd button {border: solid 1px #5E94BF;}
-.btnGroupLnd button.active {background-color: #5E94BF; border-color: #5E94BF;}
+.action-button:focus, .action-button.focus {color: #fff;background-color: red;
+    border-color: red;}
+.action-button:active, .action-button.active, .open>.action-button.dropdown-toggle {    color: #fff;    background-color: red;    border-color: red;}
+.action-button:active:hover, .action-button:active:focus, .action-button:active.focus, .action-button.active:hover, .action-button.active:focus, .action-button.active.focus, .open>.action-button.dropdown-toggle:hover, .open>.action-button.dropdown-toggle:focus, .open>.action-button.dropdown-toggle.focus {    color: #fff;    background-color: red;    border-color: red;}
+.btnGroupLnd button {border: solid 1px red;}
+.btnGroupLnd button.active {background-color: red; border-color: red;}
 .btnGroupLnd button:hover {background-color:#7faacc;}
-.btnGroupLnd button.active:hover {background-color:#5E94BF;}
+.btnGroupLnd button.active:hover {background-color:red;}
