modify gray styling

--- a/styles/btcpay/flatly/_bootswatch.scss
+++ b/styles/btcpay/flatly/_bootswatch.scss
@@ -26,6 +26,15 @@ $web-font-path: "https://fonts.googleapis.com/css?family=Lato:400,700,400italic"
   }
 }
 
+// title tag
+h1 {
+  color: white;
+}
+
+title {
+  color:white;
+}
+
 // Buttons =====================================================================
 
 .btn {
