update alert color

--- a/styles/btcpay/flatly/_variables.scss
+++ b/styles/btcpay/flatly/_variables.scss
@@ -32,11 +32,11 @@ $cyan:    #7faacc !default;
 
 
 $primary:       $cyan !default;
-$secondary:     $gray-800 !default;
-$success:       $gray-700!default;
+$secondary:     $gray-600 !default;
+$success:       $gray-800!default;
 $info:          $cyan !default;
-$warning:       $blue !default;
-$danger:        $yellow  !default;
+$warning:       $yellow !default;
+$danger:        $blue  !default;
 $light:         $gray-200 !default;
 $dark:          $gray-700 !default;
 
