change background to slate-gray instead of deep blue

--- a/styles/btcpay/checkout.css
+++ b/styles/btcpay/checkout.css
@@ -1,8 +1,8 @@
 html {
-   background-color: #2C3E50 !important;
+   background-color: #343a40!important;
 }    
 .modal.page {
-    background-color:#2C3E50;
+    background-color: #343a40;
   }  
 .top-header {background-color: #fff;}
 .top-header .timer-row__progress-bar {background:#E74C3C ;}
