--- a/styles/btcpay/flatly/bootstrap.css
+++ b/styles/btcpay/flatly/bootstrap.css
@@ -10757,7 +10757,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .bg-dark {
-  background-color: #F39C12 !important;
+  background-color: #343a40 !important;
 }
 
 .bg-dark.navbar-dark .navbar-nav .nav-link:focus,
