revert bg-dark, undo text-center style

--- a/styles/btcpay/flatly/_bootswatch.scss
+++ b/styles/btcpay/flatly/_bootswatch.scss
@@ -16,8 +16,7 @@ $web-font-path: "https://fonts.googleapis.com/css?family=Lato:400,700,400italic"
 }
 
 .bg-dark {
-    background-color: $gray-800 !important;
-//  background-color: $success !important;
+  background-color: $success !important;
   &.navbar-dark .navbar-nav {
     .nav-link:focus,
     .nav-link:hover,
@@ -34,12 +33,6 @@ $web-font-path: "https://fonts.googleapis.com/css?family=Lato:400,700,400italic"
 
 title {
   color:white;
-}
-
-.text-center {
-  text-align: center !important;
-  background-color: $gray-800;
-  color: white;
 }
 
 // Buttons =====================================================================
