--- a/styles/btcpay/flatly/bootstrap.css
+++ b/styles/btcpay/flatly/bootstrap.css
@@ -10757,7 +10757,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .bg-dark {
-  background-color: #343a40 !important;
+  background-color: #F39C12 !important;
 }
 
 .bg-dark.navbar-dark .navbar-nav .nav-link:focus,
@@ -10767,12 +10767,6 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 title {
-  color: white;
-}
-
-.text-center {
-  text-align: center !important;
-  background-color: #343a40;
   color: white;
 }
 
