re-add white title

--- a/styles/btcpay/flatly/bootstrap.css
+++ b/styles/btcpay/flatly/bootstrap.css
@@ -10766,6 +10766,10 @@ a.text-dark:hover, a.text-dark:focus {
   color: #7faacc !important;
 }
 
+h1 {
+  color: white;
+}
+
 title {
   color: white;
 }
