flip success and danger color to be cyan

--- a/styles/btcpay/darkly/_variables.scss
+++ b/styles/btcpay/darkly/_variables.scss
@@ -34,7 +34,7 @@ $secondary:     $yellow !default;
 $success:       $cyan !default;
 $info:          $green !default;
 $warning:       $orange !default;
-$danger:        $orange !default;
+$danger:        $cyan !default;
 $light:         $gray-600 !default;
 $dark:          $gray-700 !default;
 
