--- a/styles/btcpay/darkly/bootstrap.css
+++ b/styles/btcpay/darkly/bootstrap.css
@@ -31,7 +31,7 @@
   --success: #7faacc;
   --info: #00bc8c;
   --warning: #fd7e14;
-  --danger: #fd7e14;
+  --danger: #7faacc;
   --light: #999;
   --dark: #444;
   --breakpoint-xs: 0;
@@ -2043,23 +2043,23 @@ pre code {
 .table-danger,
 .table-danger > th,
 .table-danger > td {
-  background-color: #fedbbd;
+  background-color: #dbe7f1;
 }
 
 .table-danger th,
 .table-danger td,
 .table-danger thead th,
 .table-danger tbody + tbody {
-  border-color: #febc85;
+  border-color: #bcd3e4;
 }
 
 .table-hover .table-danger:hover {
-  background-color: #fecda4;
+  background-color: #c9dbea;
 }
 
 .table-hover .table-danger:hover > td,
 .table-hover .table-danger:hover > th {
-  background-color: #fecda4;
+  background-color: #c9dbea;
 }
 
 .table-light,
@@ -2529,7 +2529,7 @@ textarea.form-control {
   width: 100%;
   margin-top: 0.25rem;
   font-size: 80%;
-  color: #fd7e14;
+  color: #7faacc;
 }
 
 .invalid-tooltip {
@@ -2543,7 +2543,7 @@ textarea.form-control {
   font-size: 0.8203125rem;
   line-height: 1.5;
   color: #222;
-  background-color: rgba(253, 126, 20, 0.9);
+  background-color: rgba(127, 170, 204, 0.9);
   border-radius: 0.25rem;
 }
 
@@ -2555,18 +2555,18 @@ textarea.form-control {
 }
 
 .was-validated .form-control:invalid, .form-control.is-invalid {
-  border-color: #fd7e14;
+  border-color: #7faacc;
   padding-right: calc(1.5em + 0.75rem);
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='none' stroke='%23fd7e14' viewBox='0 0 12 12'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23fd7e14' stroke='none'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='none' stroke='%237faacc' viewBox='0 0 12 12'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%237faacc' stroke='none'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
   background-position: right calc(0.375em + 0.1875rem) center;
   background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
 
 .was-validated .form-control:invalid:focus, .form-control.is-invalid:focus {
-  border-color: #fd7e14;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(253, 126, 20, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(253, 126, 20, 0.25);
+  border-color: #7faacc;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(127, 170, 204, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(127, 170, 204, 0.25);
 }
 
 .was-validated textarea.form-control:invalid, textarea.form-control.is-invalid {
@@ -2575,19 +2575,19 @@ textarea.form-control {
 }
 
 .was-validated .custom-select:invalid, .custom-select.is-invalid {
-  border-color: #fd7e14;
+  border-color: #7faacc;
   padding-right: calc(0.75em + 2.3125rem);
-  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%23303030' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px, url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='none' stroke='%23fd7e14' viewBox='0 0 12 12'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23fd7e14' stroke='none'/%3e%3c/svg%3e") #fff no-repeat center right 1.75rem/calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
+  background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='5' viewBox='0 0 4 5'%3e%3cpath fill='%23303030' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px, url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' fill='none' stroke='%237faacc' viewBox='0 0 12 12'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%237faacc' stroke='none'/%3e%3c/svg%3e") #fff no-repeat center right 1.75rem/calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
 
 .was-validated .custom-select:invalid:focus, .custom-select.is-invalid:focus {
-  border-color: #fd7e14;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(253, 126, 20, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(253, 126, 20, 0.25);
+  border-color: #7faacc;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(127, 170, 204, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(127, 170, 204, 0.25);
 }
 
 .was-validated .form-check-input:invalid ~ .form-check-label, .form-check-input.is-invalid ~ .form-check-label {
-  color: #fd7e14;
+  color: #7faacc;
 }
 
 .was-validated .form-check-input:invalid ~ .invalid-feedback,
@@ -2597,35 +2597,35 @@ textarea.form-control {
 }
 
 .was-validated .custom-control-input:invalid ~ .custom-control-label, .custom-control-input.is-invalid ~ .custom-control-label {
-  color: #fd7e14;
+  color: #7faacc;
 }
 
 .was-validated .custom-control-input:invalid ~ .custom-control-label::before, .custom-control-input.is-invalid ~ .custom-control-label::before {
-  border-color: #fd7e14;
+  border-color: #7faacc;
 }
 
 .was-validated .custom-control-input:invalid:checked ~ .custom-control-label::before, .custom-control-input.is-invalid:checked ~ .custom-control-label::before {
-  border-color: #fd9a47;
-  background-color: #fd9a47;
+  border-color: #a3c2db;
+  background-color: #a3c2db;
 }
 
 .was-validated .custom-control-input:invalid:focus ~ .custom-control-label::before, .custom-control-input.is-invalid:focus ~ .custom-control-label::before {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(253, 126, 20, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(253, 126, 20, 0.25);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(127, 170, 204, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(127, 170, 204, 0.25);
 }
 
 .was-validated .custom-control-input:invalid:focus:not(:checked) ~ .custom-control-label::before, .custom-control-input.is-invalid:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: #fd7e14;
+  border-color: #7faacc;
 }
 
 .was-validated .custom-file-input:invalid ~ .custom-file-label, .custom-file-input.is-invalid ~ .custom-file-label {
-  border-color: #fd7e14;
+  border-color: #7faacc;
 }
 
 .was-validated .custom-file-input:invalid:focus ~ .custom-file-label, .custom-file-input.is-invalid:focus ~ .custom-file-label {
-  border-color: #fd7e14;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(253, 126, 20, 0.25);
-          box-shadow: 0 0 0 0.2rem rgba(253, 126, 20, 0.25);
+  border-color: #7faacc;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(127, 170, 204, 0.25);
+          box-shadow: 0 0 0 0.2rem rgba(127, 170, 204, 0.25);
 }
 
 .form-inline {
@@ -2967,41 +2967,41 @@ fieldset:disabled a.btn {
 
 .btn-danger {
   color: #222;
-  background-color: #fd7e14;
-  border-color: #fd7e14;
+  background-color: #7faacc;
+  border-color: #7faacc;
 }
 
 .btn-danger:hover {
   color: #fff;
-  background-color: #e96b02;
-  border-color: #dc6502;
+  background-color: #6498c1;
+  border-color: #5b92bd;
 }
 
 .btn-danger:focus, .btn-danger.focus {
   color: #fff;
-  background-color: #e96b02;
-  border-color: #dc6502;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(220, 112, 22, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(220, 112, 22, 0.5);
+  background-color: #6498c1;
+  border-color: #5b92bd;
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(113, 150, 179, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(113, 150, 179, 0.5);
 }
 
 .btn-danger.disabled, .btn-danger:disabled {
   color: #222;
-  background-color: #fd7e14;
-  border-color: #fd7e14;
+  background-color: #7faacc;
+  border-color: #7faacc;
 }
 
 .btn-danger:not(:disabled):not(.disabled):active, .btn-danger:not(:disabled):not(.disabled).active,
 .show > .btn-danger.dropdown-toggle {
   color: #fff;
-  background-color: #dc6502;
-  border-color: #cf5f02;
+  background-color: #5b92bd;
+  border-color: #518cba;
 }
 
 .btn-danger:not(:disabled):not(.disabled):active:focus, .btn-danger:not(:disabled):not(.disabled).active:focus,
 .show > .btn-danger.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(220, 112, 22, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(220, 112, 22, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(113, 150, 179, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(113, 150, 179, 0.5);
 }
 
 .btn-light {
@@ -3253,37 +3253,37 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-danger {
-  color: #fd7e14;
-  border-color: #fd7e14;
+  color: #7faacc;
+  border-color: #7faacc;
 }
 
 .btn-outline-danger:hover {
   color: #222;
-  background-color: #fd7e14;
-  border-color: #fd7e14;
+  background-color: #7faacc;
+  border-color: #7faacc;
 }
 
 .btn-outline-danger:focus, .btn-outline-danger.focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(253, 126, 20, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(253, 126, 20, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(127, 170, 204, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(127, 170, 204, 0.5);
 }
 
 .btn-outline-danger.disabled, .btn-outline-danger:disabled {
-  color: #fd7e14;
+  color: #7faacc;
   background-color: transparent;
 }
 
 .btn-outline-danger:not(:disabled):not(.disabled):active, .btn-outline-danger:not(:disabled):not(.disabled).active,
 .show > .btn-outline-danger.dropdown-toggle {
   color: #222;
-  background-color: #fd7e14;
-  border-color: #fd7e14;
+  background-color: #7faacc;
+  border-color: #7faacc;
 }
 
 .btn-outline-danger:not(:disabled):not(.disabled):active:focus, .btn-outline-danger:not(:disabled):not(.disabled).active:focus,
 .show > .btn-outline-danger.dropdown-toggle:focus {
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(253, 126, 20, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(253, 126, 20, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(127, 170, 204, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(127, 170, 204, 0.5);
 }
 
 .btn-outline-light {
@@ -5547,18 +5547,18 @@ a.badge-warning:focus, a.badge-warning.focus {
 
 .badge-danger {
   color: #222;
-  background-color: #fd7e14;
+  background-color: #7faacc;
 }
 
 a.badge-danger:hover, a.badge-danger:focus {
   color: #222;
-  background-color: #dc6502;
+  background-color: #5b92bd;
 }
 
 a.badge-danger:focus, a.badge-danger.focus {
   outline: 0;
-  -webkit-box-shadow: 0 0 0 0.2rem rgba(253, 126, 20, 0.5);
-          box-shadow: 0 0 0 0.2rem rgba(253, 126, 20, 0.5);
+  -webkit-box-shadow: 0 0 0 0.2rem rgba(127, 170, 204, 0.5);
+          box-shadow: 0 0 0 0.2rem rgba(127, 170, 204, 0.5);
 }
 
 .badge-light {
@@ -5711,17 +5711,17 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .alert-danger {
-  color: #84420a;
-  background-color: #ffe5d0;
-  border-color: #fedbbd;
+  color: #42586a;
+  background-color: #e5eef5;
+  border-color: #dbe7f1;
 }
 
 .alert-danger hr {
-  border-top-color: #fecda4;
+  border-top-color: #c9dbea;
 }
 
 .alert-danger .alert-link {
-  color: #552a06;
+  color: #2e3e4b;
 }
 
 .alert-light {
@@ -6148,19 +6148,19 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item-danger {
-  color: #84420a;
-  background-color: #fedbbd;
+  color: #42586a;
+  background-color: #dbe7f1;
 }
 
 .list-group-item-danger.list-group-item-action:hover, .list-group-item-danger.list-group-item-action:focus {
-  color: #84420a;
-  background-color: #fecda4;
+  color: #42586a;
+  background-color: #c9dbea;
 }
 
 .list-group-item-danger.list-group-item-action.active {
   color: #fff;
-  background-color: #84420a;
-  border-color: #84420a;
+  background-color: #42586a;
+  border-color: #42586a;
 }
 
 .list-group-item-light {
@@ -7156,13 +7156,13 @@ button.bg-warning:focus {
 }
 
 .bg-danger {
-  background-color: #fd7e14 !important;
+  background-color: #7faacc !important;
 }
 
 a.bg-danger:hover, a.bg-danger:focus,
 button.bg-danger:hover,
 button.bg-danger:focus {
-  background-color: #dc6502 !important;
+  background-color: #5b92bd !important;
 }
 
 .bg-light {
@@ -7254,7 +7254,7 @@ button.bg-dark:focus {
 }
 
 .border-danger {
-  border-color: #fd7e14 !important;
+  border-color: #7faacc !important;
 }
 
 .border-light {
@@ -10604,11 +10604,11 @@ a.text-warning:hover, a.text-warning:focus {
 }
 
 .text-danger {
-  color: #fd7e14 !important;
+  color: #7faacc !important;
 }
 
 a.text-danger:hover, a.text-danger:focus {
-  color: #c35a02 !important;
+  color: #4986b6 !important;
 }
 
 .text-light {
@@ -10809,7 +10809,7 @@ a.text-dark:hover, a.text-dark:focus {
 .table-danger,
 .table-danger > th,
 .table-danger > td {
-  background-color: #fd7e14;
+  background-color: #7faacc;
 }
 
 .table-warning,
@@ -10849,7 +10849,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .table-hover .table-danger:hover, .table-hover .table-danger:hover > th, .table-hover .table-danger:hover > td {
-  background-color: #f57102;
+  background-color: #6d9ec5;
 }
 
 .table-hover .table-warning:hover, .table-hover .table-warning:hover > th, .table-hover .table-warning:hover > td {
@@ -10929,7 +10929,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .alert-danger {
-  background-color: #fd7e14;
+  background-color: #7faacc;
 }
 
 .alert-light {
