--- a/styles/btcpay/checkout.css
+++ b/styles/btcpay/checkout.css
@@ -16,4 +16,7 @@ html {
     border-color: #E74C3C ;}
 .action-button:active, .action-button.active, .open>.action-button.dropdown-toggle {    color: #fff;    background-color: #E74C3C ;    border-color: #E74C3C ;}
 .action-button:active:hover, .action-button:active:focus, .action-button:active.focus, .action-button.active:hover, .action-button.active:focus, .action-button.active.focus, .open>.action-button.dropdown-toggle:hover, .open>.action-button.dropdown-toggle:focus, .open>.action-button.dropdown-toggle.focus {    color: #fff;    background-color: #E74C3C ;    border-color: #E74C3C ;}
-
+.btnGroupLnd button {border: solid 1px #5E94BF;}
+.btnGroupLnd button.active {background-color: #5E94BF; border-color: #5E94BF;}
+.btnGroupLnd button:hover {background-color:#7faacc;}
+.btnGroupLnd button.active:hover {background-color:#5E94BF;}
